# robot-human-handovers

./: .gitignore  CMakeLists.txt  Makefile  abstract.html  classify.sh  env  extract.sh  kththesis.cls  presentation.odp  record.sh  sammanfattning.html  tagid.sh  thesis.tex
bib/: references-extra.bib  references.bib
data/hand/: pinch_xyzrgba.pcd
data/object/: cup_xyz.pcd  cup_xyzrgba.pcd  knife2_xyzrgba.pcd  knife_type2_xyzrgba.pcd  knife_xyzrgba.pcd  scissors_xyzrgba.pcd
data/objects/: objects.db  objects.xcf
data/objects/depth/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  3  4  5  6  7  8  9  bottle  can  cup  glass  pitcher
doc/essay/: Makefile  references-extra.bib  references.bib  thesis.tex
doc/essay/img/: handover-images.py  rgbd.py
doc/essay/tex/: conclusion.tex  intro.tex  methods.tex  related-work.tex  results.tex
img/: cluster_object.py  handover-images.py
img/methods/: flowchart.dia
img/results/: bad-images.py
img/results/bad-images/: generate.sh
include/: utils.h
include/cluster/: clusterer.h
include/hand/: hand_tracker.h
include/kinect2/: grabber.h
include/rec/: tracker.h
include/track/: object_tracker.h
src/classification/: __init__.py  __main__.py  alexnet.py  data.py  data_test.py  export_samples.py  main.py  prepare.py  results.py  samples.py  utils.py
src/classification/plot/: batch-sizes.gp  batch-sizes__loss.gp  batch-sizes__test-acc.gp  batch-sizes__val-acc.gp  confmat.gp  end-results_loss.gp  learning-rate.gp  learning-rates__loss.gp  learning-rates__test-acc.gp  learning-rates__val-acc.gp  object-impact.gp  object-impact_object.gp  results-loss.gp  results-test.gp  results-val.gp  results.gp
src/clustering/: __main__.py  clusters.gp  clusters.py  export_samples.py  main.py  samples.py  scores.gp  utils.py
src/clustering/plot/: clusters-2d.gp  clusters-3d.gp  clusters.gp  clusters_2d.gp  clusters_3d.gp  mean-silhouette.gp  obj-sampl-assgmnt.gp  pca.gp  samples_silhouette_score.gp  scores.gp  sum-sqr-dist.gp
src/extract/: CMakeLists.txt  grasp.py  handover.cpp  handover_extract.cpp  inspect.py  main.cc  tagid_extract.cpp
src/grasp-prediction/: alexnet.py  data.py  grasp.py  main.py  model.py  predict.py  test_alexnet.py
src/hand/: CMakeLists.txt  hand_tracker.cpp  main.cpp
src/handoverdata/: __init__.py  data.py  grasp.py  handover.py  helpers.py  object.py  tag.py
src/object_pcd/: CMakeLists.txt  main.cpp
src/prediction/: data.py  data_test.py  grasp.py  prepare.py  test_alexnet.py
src/rec/: CMakeLists.txt  Makefile  convert.cpp  main.cpp  play.py  tracker.cpp
src/track/: CMakeLists.txt  Makefile  main.cpp  object_tracker.cpp
tex/: abstract_en.tex  abstract_sv.tex  bad-images.tex  conclusion.tex  intro.tex  methods.tex  related-work.tex  results.tex
